@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006-2016 Andreas Persson
+ * Copyright (C) 2006-2017 Andreas Persson
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -776,6 +776,10 @@ void MainWindow::update_dimregs()
             add_region_to_dimregs(region, stereo, all_dimregs);
         }
     }
+
+    m_DimRegionChooser.setModifyAllRegions(all_regions);
+    m_DimRegionChooser.setModifyAllDimensionRegions(all_dimregs);
+    m_DimRegionChooser.setModifyBothChannels(stereo);
 }
 
 void MainWindow::dimreg_all_dimregs_toggled()
@@ -1527,7 +1531,7 @@ void MainWindow::on_action_help_about()
     dialog.set_name("Gigedit");
 #endif
     dialog.set_version(VERSION);
-    dialog.set_copyright("Copyright (C) 2006-2016 Andreas Persson");
+    dialog.set_copyright("Copyright (C) 2006-2017 Andreas Persson");
     const std::string sComment =
         _("Built " __DATE__ "\nUsing ") +
         ::gig::libraryName() + " " + ::gig::libraryVersion() + "\n\n" +
